# build/swagger.json
@@ -6,7 +6,27 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {},
+		"schemas": {
+			"CreatePostData": {
+				"properties": {
+					"published": {
+						"type": "boolean"
+					},
+					"content": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"published",
+					"content",
+					"title"
+				],
+				"type": "object"
+			}
+		},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -18,6 +38,66 @@
 		"contact": {}
 	},
 	"paths": {
+		"/post": {
+			"post": {
+				"operationId": "CreatePost",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"published": {
+											"type": "boolean"
+										},
+										"content": {
+											"type": "string"
+										},
+										"title": {
+											"type": "string"
+										},
+										"updatedAt": {
+											"type": "string",
+											"format": "date-time"
+										},
+										"createdAt": {
+											"type": "string",
+											"format": "date-time"
+										},
+										"id": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"required": [
+										"published",
+										"content",
+										"title",
+										"updatedAt",
+										"createdAt",
+										"id"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreatePostData"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/message/{id}": {
 			"get": {
 				"operationId": "GetMessage",
