# types/post.ts
@@ -1,0 +1,5 @@
+export type CreatePostData = {
+  title: string;
+  content: string;
+  published: boolean;
+}
